Allow unconditional activation of frontmost browser windows.

If a browser window was showing a bubble, that bubble was
considered the front window. We're interested at the browser
window level, so check that.

BUG=780723
TEST=as in bug

Change-Id: I1c1a56a1a8016fa5285997ac0e38239446d7b0eb
Reviewed-on: https://chromium-review.googlesource.com/752029
Reviewed-by: Mike Wittman <wittman@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513623}
Former-commit-id: 9dbb222fa1919414fb9b799fa80fee5db77407a1